--- a/_includes/_app_header.html
+++ b/_includes/_app_header.html
@@ -1,8 +1,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="apple-touch-startup-image" href="<!-- @path loading-screen@3x.png -->">
-<link rel="apple-touch-icon" href="<!-- @path icon-76x76.png -->">
-<link rel="apple-touch-icon" sizes="76x76" href="<!-- @path icon-76x76.png -->">
-<link rel="apple-touch-icon" sizes="120x120" href="<!-- @path icon-120x120.png -->">
-<link rel="apple-touch-icon" sizes="152x152" href="<!-- @path icon-152x152.png -->">
+<link rel="apple-touch-startup-image" href="">
+<link rel="apple-touch-icon" href="">
+<link rel="apple-touch-icon" sizes="76x76" href="">
+<link rel="apple-touch-icon" sizes="120x120" href="">
+<link rel="apple-touch-icon" sizes="152x152" href="">
